<resources>
    <string name="app_name">MyBuddy</string>
    <string name="et_registration_fristname">Frist Name</string>
    <string name="et_registration_lastname">Last Name</string>
    <string name="et_registration_emailid">Email id</string>
    <string name="et_registration_password">Password</string>
    <string name="et_registration_confirmpassword">Confirm Password</string>
    <string name="bt_registration_submit">Submit</string>
    <string name="login_etusername">Eamil id</string>
    <string name="login_etpassword">Password</string>
    <string name="login_bt_submit">Submit</string>
    <string name="createcontact_ethintage">Age</string>
    <string name="createcontact_ethintphonenumber">Phone Number</string>
    <string name="createcontact_ethintbloodgroup">Blood Group</string>
    <string name="createcontact_ethintworking">Working</string>
    <string name="createcontact_ethintcity">City</string>
    <string name="createcontact_ethintstate">State</string>
    <string name="createcontact_ethintcountry">Country</string>
    <string name="createcontact_btsubmit">Submit</string>
    <string name="createcontact_ethintname">Name</string>
    <string name="createcontact_ethintemail">Email</string>
    <string name="createcontact_ethintprofession">Profession</string>
    <string name="login_createregistration">Create User</string>
    <string name="contacts_btcreatecontact">CreateContact</string>
    <string name="contactviewpager_tv_favourit">Favourit</string>
    <string name="contactviewpager_tv_contactinfo">ContactInfo</string>
    <string name="contactviewpager_tv_iworkas">I work as </string>
    <string name="contactviewpager_tv_andilive">and i live in </string>
    <string name="contactviewpager_tv_cama">,</string>
    <string name="login_tv_title">MyBuddy</string>
    <string name="RegistrationTitle">Registration</string>
    <string name="ContactsTitle">Contacts</string>
    <string name="CreateContactTitle">Create Contact</string>
    <string name="dialogmenu_profile">Profile</string>
    <string name="dialogmenu_favourit">Favourit</string>
    <string name="dialogmenu_changepassword">Change Password</string>
    <string name="dialogmenu_logout">Log out</string>
    <string name="FavouriteTitle">Favourit</string>
    <string name="contactsactvity_logoutmessage">Are you want to exit</string>
    <string name="contactsactivity_logoutyes">Yes</string>
    <string name="contactsactivity_logoutno">No</string>
    <string name="contactsactivity_logout">Logout</string>
    <string name="contactsactivity_message">Are sure you want exit</string>
    <string name="profile_btsubmit">Submit</string>
    <string name="proifile_title">Profile</string>
    <string name="btChangePasswordSubmit">Submit</string>
    <string name="changepasswordTitle">Change Password</string>
    <string name="cotactinfo_name">Name</string>
    <string name="cotactinfo_email">Email</string>
    <string name="cotactinfo_profession">Profession</string>
    <string name="cotactinfo_bloodgroup">Bloodgroup</string>
    <string name="cotactinfo_working">Working</string>
    <string name="cotactinfo_city">City</string>
    <string name="cotactinfo_state">State</string>
    <string name="cotactinfo_country">Country</string>
    <string name="contactinfo_tv_name">Name</string>
    <string name="contactinfo_tv_colon">:</string>
    <string name="contactinfo_tv_email">Email</string>
    <string name="contactinfo_tv_phonenumber">PhoneNumber</string>
    <string name="contactinfo_tv_profession">Profession</string>
    <string name="contactinfo_tv_bloodgroup">Bloodgroup</string>
    <string name="contactinfo_tv_working">Working</string>
    <string name="contactinfo_tv_city">City</string>
    <string name="contactinfo_tv_state">State</string>
    <string name="contactinfo_tv_country">Country</string>
    <string name="contactinfo_tv_age">Age</string>
    <string name="contactinfotitle">ContactInfo</string>
    <string name="changepassword_hintnewpassword">New Password</string>
    <string name="changepassword_hintconfirmpassword">Confirm Password</string>
    <string name="changepassword_checkboxshowpassword">Show Password</string>
    <string name="title_login">Login</string>
    <string name="titleRegistration">Registration</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_Favourit">Favourit</string>
    <string name="menu_createcontact">CreateContact</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_changepassword">ChangePassword</string>
    <string name="menu_favourit">Favourit</string>
    <string name="menu_logout">Logout</string>
    <string name="title_profile">Profile</string>
    <string name="title_changepassword">ChangePassword</string>


</resources>
