<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
              android:background="@color/bg_login"
    tools:context="com.example.kiran.mybuddy.activitys.CreatecontactActivity">
<ImageView
    android:id="@+id/iv_createcontact_click"
    android:layout_width="100dp"
    android:layout_height="50dp"
android:src="@drawable/ic_row_contactpick_128"
    android:layout_gravity="center"
    />
    <EditText
        android:id="@+id/et_createcontact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/createcontact_ethintname"
        android:inputType="text"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />

    <EditText
        android:id="@+id/et_createcontact_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/createcontact_ethintage"
        android:inputType="number"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />

    <EditText
        android:id="@+id/et_createcontact_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/createcontact_ethintphonenumber"
        android:inputType="number"
        android:singleLine="true"
        android:maxLength="10"
        android:imeOptions="actionNext"/>
    <EditText
        android:id="@+id/et_createcontact_profession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/createcontact_ethintprofession"
        android:singleLine="true"
        android:inputType="text"/>
    <EditText
        android:id="@+id/et_createcontact_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/createcontact_ethintemail"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />

    <EditText
        android:id="@+id/et_createcontact_bloodgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/createcontact_ethintbloodgroup"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />
    <EditText
        android:id="@+id/et_createcontact_working"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/createcontact_ethintworking"
        android:inputType="text"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />
    <EditText
        android:id="@+id/et_createcontact_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/createcontact_ethintcity"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />
    <EditText
        android:id="@+id/et_createcontact_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/createcontact_ethintstate"
        android:inputType="text"
        android:singleLine="true"
        android:imeOptions="actionNext"
        />
    <EditText
        android:id="@+id/et_createcontact_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/createcontact_ethintcountry"
        android:inputType="text"
        android:singleLine="true"
        android:imeOptions="actionDone"
        />
    <Button
        android:id="@+id/bt_contactregistration_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createcontact_btsubmit"
        />
</LinearLayout>

</ScrollView>

