<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_login"
                tools:context=".activitys.RegistrationActivity"
    >

    <include
        layout="@layout/appbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <EditText
            android:id="@+id/et_registration_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_registration_fristname"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/et_registration_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_registration_lastname"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/et_registration_emailid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_registration_emailid"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/et_registration_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_registration_password"
            android:imeOptions="actionNext"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/et_registration_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_registration_confirmpassword"
            android:singleLine="true"
            />


        <Button
            android:id="@+id/bt_registration_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/bt_registration_submit"

            />
    </LinearLayout>
</RelativeLayout>
