<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    tools:context="com.example.kiran.mybuddy.activitys.ChangePasswordActivity">
<include layout="@layout/appbar"
         android:layout_height="60dp"
         android:layout_width="match_parent"/>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_changepassword_256"
        />
    <EditText
        android:id="@+id/et_changepassword_newpasswrod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/changepassword_hintnewpassword"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/et_changepassword_cofirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/changepassword_hintconfirmpassword"
        android:inputType="textPassword"
        />
    <CheckBox
        android:id="@+id/cb_changepassword_showpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changepassword_checkboxshowpassword"
        />
    <Button
        android:id="@+id/bt_changepassword_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btChangePasswordSubmit"
        />
</LinearLayout>
</RelativeLayout>
