<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="250dp"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/bg_dialogmenu"
    >

    <LinearLayout
        android:id="@+id/rl_dialogmenu_profile"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_dialogmenu">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_dialogmenu_profile_64"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dialogmenu_profile"
            android:textSize="@dimen/size_tvdialogmenu"
            android:gravity="center_horizontal"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_dialogmenu_favourit"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_dialogmenu">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_dialogmenu_favourit_64"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dialogmenu_favourit"
            android:textSize="@dimen/size_tvdialogmenu"
            android:gravity="center_horizontal"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/rl_dialogmenu_changepassword"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_dialogmenu"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_dialogmenu_changepassword_64"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dialogmenu_changepassword"
            android:textSize="@dimen/size_tvdialogmenu"
            android:gravity="center_horizontal"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/rl_dialogmenu_logout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_dialogmenu">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_dialogmenu_logout_64"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dialogmenu_logout"
            android:textSize="@dimen/size_tvdialogmenu"
            android:gravity="center_horizontal"
            />
    </LinearLayout>

</LinearLayout>