<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_login"
                android:orientation="vertical"
                tools:context="com.example.kiran.mybuddy.activitys.LoginActivity">

    <include
        layout="@layout/appbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_emailid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@color/colorAccent"
            >

            <EditText
                android:id="@+id/et_login_emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/et_marginbottom_login"
                android:hint="@string/login_etusername"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textColorHint="@color/green"


                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:hintEnabled="true"
            >

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/et_marginbottom_login"
                android:hint="@string/login_etpassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bt_login_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/et_marginbottom_login"
            android:layout_marginTop="@dimen/bt_margintop_login"
            android:clickable="true"
            android:text="@string/login_bt_submit"
            android:theme="@style/MyButton"
            />


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_login_createuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        app:backgroundTint="@color/colorPrimary"
        android:src="@drawable/ic_add_white_24dp"
        app:useCompatPadding="true"
        />
</RelativeLayout>
